<resources>
    <string name="app_name">Sindata Test</string>
    <string name="roomrevenue">Room Revenue Breakdown</string>
    <string name="tanggalcontoh">11/22/2024</string>
    <string name="room">Room</string>
    <string name="argt">Argt</string>
    <string name="rcode">RCode</string>
    <string name="curr">Curr</string>
    <string name="roomrate">Room Rate</string>
    <string name="pax">Pax</string>
    <string name="comp">Comp</string>
    <string name="arrival">Arrival</string>
    <string name="depart">Depart</string>
    <string name="guestname">Guest Name</string>
    <string name="zero">0</string>
    <string name="panjang">Afhakkbujk jfwe wekr wek ke</string>
    <string name="detailklik">Klik Button Untuk Mencari</string>
    <string name="tekanbutton">Tekan</string>
</resources>